Adjust the left padding for avoid overlapping

--- a/style.css
+++ b/style.css
@@ -34,3 +34,7 @@ p {
   flex-direction: column;
   position: fixed;
 }
+
+#main-doc {
+  padding-left: 315px;
+}
